--- a/brew-app/package.json
+++ b/brew-app/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "browser-sync": "^2.14.0",
     "gulp": "^3.9.1",
-    "gulp-sass": "^2.3.2"
+    "gulp-sass": "^2.3.2",
+    "http-proxy-middleware": "^0.17.1"
   }
 }
