--- a/cryptotrade/package.json
+++ b/cryptotrade/package.json
@@ -15,7 +15,8 @@
     "chart.js": "^2.6.0",
     "vue": "^2.4.2",
     "vue-chartjs": "^2.8.2",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vue2-filters": "^0.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
