--- a/cryptotrade/package.json
+++ b/cryptotrade/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.4.2",
     "vue-chartjs": "^2.8.2",
     "vue-router": "^2.7.0",
+    "vue-websocket": "^0.2.2",
     "vue2-filters": "^0.2.1"
   },
   "devDependencies": {
