--- a/vue-cart/package.json
+++ b/vue-cart/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "vue": "^2.4.2",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vue2-filters": "^0.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
