--- a/vue-cart/package.json
+++ b/vue-cart/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
-    "vue2-filters": "^0.2.1"
+    "vue2-filters": "^0.2.1",
+    "vuex": "^2.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
